symfony/web/themes/default/css/main.css
/* ... */
.subscribe:hover {
	background: #288832;
	color:#fff;
}
#welcome {
	color:#5d5d5d;
	background: url(../images/welcome.png) no-repeat center right;
	padding:2px 32px 1px 1px;
	text-decoration:none;
	position:absolute;
	top:55px;
	right:35px;
	z-index:999;
}
#welcome-menu {
	background:#454648;
	z-index:999;
	position:absolute;
	top:75px;
	right:30px;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	padding:5px 10px;
	display:none;
	min-width:122px;
}
#welcome-menu li a {
	color:#fff;
	line-height:20px;
	text-decoration:none;
}
#welcome-menu li a:hover {
	text-decoration:underline;
}
#help {
	color:#f28c38;
	background: url(../images/help-down.png) no-repeat center right;
	padding:2px 15px 1px 1px;
	text-decoration:none;
	position:absolute;
	top:10px;
	right:233px;
	z-index:999;
}
#wrapper .activated-help {
	background: url(../images/help-up.png) no-repeat center right;
}
#help-menu {
	background:#454648;
	z-index:9998;
	position:absolute;
	top:30px;
	right:230px;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	padding:5px 10px;
	display:none;
	min-width:122px;
}
#help-menu li a {
	color:#fff;
	line-height:20px;
	text-decoration:none;
}
#help-menu li a:hover {
	text-decoration:underline;
}
#content {
	padding-top:35px;
}
.box {
	margin:20px;
	position:relative;
}
.box div.top {
	width:100%;
	margin-bottom:10px;
	border-bottom:1px solid #dedede;
	padding-bottom:8px;
	overflow:hidden;
}
.box .inner {
	background:#f7f6f6;
	padding:15px;
	border:1px solid #dedede;
	border-top:none;
	-moz-border-radius-bottomright: 3px;
	-webkit-border-bottom-right-radius: 3px;
	border-bottom-right-radius: 3px;
	-moz-border-radius-bottomleft: 3px;
	-webkit-border-bottom-left-radius: 3px;
	border-bottom-left-radius: 3px;
	overflow:hidden;
	margin-bottom:19px;
}
.box .head {
	position:relative;
}
.box .head h1 {
	background: #f3f3f3 url(../images/h1-bg.png) left bottom repeat-x;
	font-size:18px;
	color:#5d5d5d;
	padding:9px 15px;
	line-height:20px;
	border:1px solid #dedede;
	-moz-border-radius-topleft: 3px;
	-webkit-border-top-left-radius: 3px;
	 border-top-left-radius: 3px;
	-moz-border-radius-topright: 3px;
	-webkit-border-top-right-radius: 3px;
	border-top-right-radius: 3px;
}
.simple .inner {
	border:1px solid #dedede;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
}
.box .toggle {
	background: url(../images/toggle-down.png) no-repeat 99% 50%;
	width:9px;
	height:8px;
	text-indent:-9999px;
	display:block;
	position:absolute;
	top:0;
	left:0;
	width:100%;
	height:40px;
}
.box .toggle.activated	{
	background: url(../images/toggle-up.png) no-repeat 99% 50%;
}
form ol {
	border-bottom:1px solid #dedede;
	overflow:hidden;
}
form ol li {
	width:25%;
	float:left;
	margin:0 0 15px 0;
	position:relative;
}
.single form ol li {
	width:90%;
	float:left;
	margin:3px 0 12px 0;
}
.single form ol li span {
	float:left;
	width:225px;
	margin-top:9px;
}
form ol li.required {
	float:left;
	width:425px;
	margin-top:9px;
	color:#a9a9a9;
	font-size:11px;
}
form ol li.required-odd {
	clear:both;
	width:425px;
	margin-top:9px;
	color:#a9a9a9;
	font-size:11px;
}
form ol li.required em {
	color:#aa4935;
}
form ol li label {
	display:block;
	color:#5d5d5d;
	margin-bottom:5px;
}
form ol li label em {
	color:#aa4935;
}
.single form ol li label, .single form ol li .label {
	display:block;
	color:#5d5d5d;
	width:120px;
	float:left;
	margin:6px 0 0 0;
}
.single form ol li .label {
	height:50px;
	margin:0;
}
form ol li input, form ol li select,  form ol li textarea {
	font-size:13px;
	border:1px solid #d2d1d1;
	color:#5d5d5d;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	outline:none;
	padding:4px 6px;
	width:80%;
}
.single form ol li input, .single form ol li select {
	float:left;
	width:225px;
}
.single form ol li input.calendar {
	float:left;
	width:198px;
}
.single form ol li select {
	float:left;
	width:239px;
}
.single form ol li textarea {
	float:left;
	width:225px;
	height:80px;
	margin-bottom:10px;
}
form ol li select {
	height:25px;
	margin-top:4px;
	width:89%;
	/*padding:5px; */
}
form ol li.new {
	clear:left;
}
form ol li.radio input, form ol li.checkbox input {
	width:auto;
	border:none;
}
form ol li.radio label, form ol li.checkbox label {
	display:inline;
	margin-right:25px;
	line-height:20px;
}
.single form ol li.radio label, .single form ol li.checkbox label {
	display:block;
	margin:0 0 10px 0;
	width:70%;
}
form p {
	padding-top:10px;
	text-align:left;
}
.single form p {
	text-align:left;
}
form button, input[type="button"], input[type="submit"] {
	background:#33ac3f;
	color:#fff;
	font-size:15px;
	padding:8px 20px;
	border:none;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	margin-right:4px;
}
.single form button {
	margin-left:0;
}
form button.reset, input.reset {
	background:#848484;
}
form button.delete, input.delete {
	background:#aa4935;
}
form button.edit {
	background:#db7018;
}
.simple form button {
	margin-left:0;
	margin-right:10px;
}
.errorBorder {
	border:1px solid #aa4935;
}
.box ul.top {
	position:absolute;
	top:25px;
	right:20px;
}
.box ul.bottom {
	float:right;
	padding:15px 0 0 ;
}
.paging li {
	display:inline;
}
.paging a {
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	padding:3px 8px;
	color:#5d5d5d;
	text-decoration:none;
	float:left;
	margin:0 2px;
}
.paging a:hover {
	background:#eaeaea;
}
.paging a.current {
	background:#33ac3f;
	color:#fff;
}
.paging li.first a, .paging li.previous a, .paging li.next a, .paging li.last a {
	padding:1px 8px;
	text-indent:-9999px;
}
.paging li.first a {
	background: url(../images/paging-first.png) no-repeat 0 0;
	margin:3px 0 0 0;
}
.paging li.previous a {
	background: url(../images/paging-previous.png) no-repeat 0 0;
	margin:2px 0 0 5px;
}
.paging li.next a {
	background: url(../images/paging-next.png) no-repeat 0 0;
	margin:2px 0 0 7px;
}
/* ... */

